--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -1,10 +1,11 @@
 name: barcode_scanner_example
 description: Demonstrates how to use the barcode_scanner plugin.
-
 publish_to: 'none'
+version: 1.0.0+1
 
 environment:
-  sdk: ">=2.16.1 <3.0.0"
+  sdk: '>=3.0.0 <4.0.0'
+  flutter: ">=3.0.0"
 
 dependencies:
   flutter:
@@ -19,7 +20,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
+  flutter_lints: ^2.0.0
 
 flutter:
   uses-material-design: true
