--- a/android/build.gradle
+++ b/android/build.gradle
@@ -27,7 +27,7 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 31
+    compileSdk 31
 
     sourceSets {
         main.java.srcDirs += 'src/main/kotlin'
@@ -55,7 +55,10 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
     implementation 'com.google.android.material:material:1.5.0'
+
     implementation 'com.google.mlkit:barcode-scanning:17.0.2'
+    implementation 'com.google.mlkit:text-recognition:16.0.0'
+
     implementation 'androidx.camera:camera-core:1.1.0-beta01'
     implementation 'androidx.camera:camera-camera2:1.1.0-beta01'
     implementation 'androidx.camera:camera-lifecycle:1.1.0-beta01'
